# geneweb

./: .coverage  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .ocamlformat  .ocamlformat-ignore  .travis-ci.sh  .travis.yml  ;  CHANGES  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_FLOW.md  Dockerfile  Dockerfile.static  GeneWeb.icns  HACKING.md  ICHANGES  INSTALL  INSTALL.md  KNOWN_BUGS  LICENCE  LICENSE  LOCALIZATION.md  Makefile  Makefile.Mac  README  README.md  appveyor.yml  build-docker.sh  check_build_status.py  configure  configure.ml  consang  create_bundle.sh  create_dmg.sh  create_icon_set.sh  (+46 more)
lib/: GWPARAM.ml  GWPARAM.mli  GWPARAM_ITL.ml  GWPARAM_ITL.mli  advSearchOk.ml  advSearchOk.mli  advSearchOkDisplay.ml  advSearchOkDisplay.mli  alln.ml  alln.mli  allnDisplay.ml  allnDisplay.mli  ancStatsDisplay.ml  ancestorStats.ml  ansel.ml  ansel.mli  api.ml  api.proto  api_app.proto  api_app_piqi.ml  api_app_piqi_ext.ml  api_conf.ml  api_conf.mli  api_def.ml  api_graph.ml  api_link.ml  api_link_tree.piqi  api_link_tree.proto  api_link_tree_piqi.ml  api_piqi.ml  api_piqi_ext.ml  api_saisie.proto  api_saisie_autocomplete.ml  api_saisie_read.ml  api_saisie_read.proto  api_saisie_read_piqi.ml  api_saisie_read_piqi_ext.ml  api_saisie_write.ml  api_saisie_write.proto  api_saisie_write_piqi.ml  (+287 more)
lib/ancient/: dune  dune.in  gw_ancient.dum.ml  gw_ancient.mli  gw_ancient.wrapped.ml
lib/brotli/: brotli.ml  brotli.mli  brotli_stubs.c  dune
lib/compat/: dune  geneweb_compat.ml  geneweb_compat.mli
lib/core/: #consang.mli#  .#consang.mli  consang.ml  consang.mli  consangAll.ml  consangAll.mli  dune  dune.in
lib/db/: avl.mli  collection.ml  collection.mli  database.ml  database.mli  db_gc.ml  db_gc.mli  dbdisk.ml  dbdisk.mli  driver.ml  driver.mli  dune  dutil.ml  dutil.mli  gutil.ml  gutil.mli  iovalue.ml  iovalue.mli  outbase.ml  outbase.mli  position.ml  position.mli
lib/def/: adef.ml  adef.mli  common.ml  common.mli  def.ml  dune  dune.in  gwdb_driver_sig.ml
lib/dirs/: dune  generate_flags.ml  geneweb_dirs.ml  geneweb_dirs.mli  var.ml  windows_stubs.c  xdg.ml  xdg.mli
lib/dsk_format/: cache.ml  cache.mli  dsk_format.ml  dune  format.ml  format.mli  partition.ml  partition.mli  partition_system.ml  partition_system.mli  version.ml  version.mli
lib/dump/: dune  gw_dump.ml
lib/fs/: dune  file.ml  file.mli  fpath.ml  fpath.mli
lib/gwdb/: dune  dune.in  gutil.ml  gutil.mli  gwdb.ml  gwdb.mli
lib/gwdb-gwc1/: database.mli  dbdisk.mli  dune  dutil.ml  dutil.mli  gwdb_driver.ml  gwdb_gc.ml
lib/gwdb-gwc1-x-arangodb/: dune.in  gwdb_arango_migrate.ml  gwdb_driver.ml  http_curl.ml  json_jsonaf.ml
lib/gwdb-gwc2/: db2.ml  db2disk.ml  db2out.ml  dune  gwdb_driver.ml
lib/gwdb-legacy/: btree.ml  btree.mli  database.ml  database.mli  dbdisk.mli  dune  dune.in  dutil.ml  dutil.mli  gwdb_driver.ml  gwdb_driver.mli  gwdb_driver_legacy.ml  gwdb_driver_legacy.mli  gwdb_gc.ml  gwdb_gc.mli  iovalue.ml  iovalue.mli  outbase.ml  outbase.mli  translate.ml  translate.mli
lib/gwdb-legacy-x-arangodb/: dune  dune.in  gwdb_arango_migrate.ml  gwdb_driver.ml  gwdb_driver_arango.ml  gwdb_driver_env.ml  json.ml  json_jsonaf.ml
lib/gwdb-versioned/: #gwdb_gnwb25.ml#  .#gwdb_gnwb25.ml  compat.ml  compat.mli  dsk_format.ml  dune  dune.in  format.ml  formats.ml  gw_formats.ml  gw_formats.mli  gwdb_driver.ml  gwdb_gnwb25.ml  gwdb_gnwb26.ml  partition.ml  partition.mli  translate.ml  translate.mli  version.ml  version.mli
lib/gwdb.mli/: dune  gwdb.mli
lib/gwdb1/: database.ml  db2.ml  db2.mli  db2disk.ml  db2disk.mli  dbdisk.mli  dune  dutil.ml  dutil.mli  gwdb.ml  gwdb1.ml  gwdb1_internal.ml  outbase.ml  type.ml
lib/gwdb2/: database.ml  db2.mli  dune  gwdb.ml  gwdb2.ml  gwdb2_internal.ml  outbase.ml
lib/gwdb_driver.mli/: dune  gwdb_driver.mli
lib/gwxjg/: README.MD  data.ml  dune  ezgw.ml  lexicon_parser.mll  trans.ml
lib/io/: dune  iovalue.ml  iovalue.mli
lib/iovalue/: dune  iovalue.ml  iovalue.mli
lib/json_export/: dune  json_converter.ml  json_converter.mli
lib/loc/: dune  geneweb_loc.ml  geneweb_loc.mli
lib/log-common/: common.ml  common.mli  dune
lib/log-default/: driver.ml  dune
lib/log-driver/: driver.mli  dune
lib/log-syslog/: driver.ml  dune
lib/logs/: dune  dune.in  geneweb_syslog.dummy.ml  geneweb_syslog.wrapped.ml  logs.ml  logs.mli
lib/oidc/: dune  oidc.ml  oidc.mli
lib/ord/: def_ord.ml  def_ord.mli  dune
lib/plugin/: dune  geneweb_plugin.ml  geneweb_plugin.mli  meta.ml  meta.mli
lib/rpc/: dune  encoding.ml  encoding.mli  json_rpc.ml  json_rpc.mli  service.ml  service.mli
lib/search/: analyze.ml  analyze.mli  automaton.ml  automaton.mli  comparator.ml  cursor.ml  cursor.mli  dune  flatset.ml  flatset.mli  heap.ml  heap.mli  index.ml  index.mli  iterator.ml  iterator.mli  (+4 more)
src/: .depend  .gitignore  Makefile  Makefile.Mac  Makefile.Mac.depend  README.md  adef.ml  adef.mli  advSearchOk.ml  alln.ml  ancmenu.ml  ansel.ml  api.ml  api.proto  api_app.proto  api_app_piqi.ml  api_conf.ml  api_conf.mli  api_def.ml  api_graph.ml  api_link.ml  api_link_tree.proto  api_link_tree_piqi.ml  api_piqi.ml  api_piqi_ext.ml  api_saisie.proto  api_saisie_autocomplete.ml  api_saisie_read.ml  api_saisie_read.proto  api_saisie_read_piqi.ml  api_saisie_read_piqi_ext.ml  api_saisie_util.ml  api_saisie_write.ml  api_saisie_write.proto  api_saisie_write_piqi.ml  api_saisie_write_piqi_ext.ml  api_search.ml  api_stats.ml  api_stats.proto  api_stats_piqi.ml  (+198 more)
test/: Makefile  base64_test.ml  calendar_test.ml  capture_consang_snapshots.py  check_ci_environment.py  dag2html_test.ml  date_test.ml  declension_test.ml  dict.txt  dune  dune.in  event.ml  event_test.ml  galichet.gw  galichet.gwo  ged.t  gnwb_utils.ml  gnwb_utils.mli  golden_master_runner.py  grimaldi.gwf  grimaldi.rdb  gw.t  gwdb.ml  gwdb_driver.ml  gwu_test.sh  heap_test.ml  install-cgi.command  install-cgi.sh  merge_ind_test.ml  merge_test.ml  mock_ocaml_binary.py  notes_test.ml  oidc_test.ml  place_test.ml  ports.ml  ports_test.ml  redis.conf  rpc.html  rpc_test.ml  run-GW-test.sh  (+29 more)
(+3551 files in other folders)
