opam-version: "2.0"

name: "geneweb"

synopsis: "Genealogy library and software, API mode enabled"

maintainer: [ "Julien Sagot <julien.sagot@geneanet.org>" ]

authors: [ "Daniel de Rauglaudre" ]

homepage: "http://geneweb.org"

dev-repo: "git://github.com/geneweb/geneweb"

bug-reports: "https://github.com/geneweb/geneweb/issues"

build: [
  [ "ocaml" "./configure.ml" "--api" ]
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "benchmark" { with-test }
  "camlp5" { build }
  "cppo" { build }
  "dune" { >= "1.10" }
  "markup"
  "ocaml" { >= "4.05" }
  "ocurl"
  "ounit" { with-test }
  "piqi"
  "piqilib"
  "redis"
  "redis-sync"
  "stdlib-shims"
  "unidecode" { = "0.2.0" }
  "uucp"
  "yojson"
]

conflict-class: [ "geneweb" ]
