opam-version: "2.0"

synopsis: "Genealogy library and software"

maintainer: [ "Julien Sagot <julien.sagot@geneanet.org>" ]

authors: [ "Daniel de Rauglaudre" ]

homepage: "http://geneweb.org"

dev-repo: "git://github.com/geneweb/geneweb"

bug-reports: "https://github.com/geneweb/geneweb/issues"

build: [
  [ "./configure" ]
  [ "dune" "build" "-p" "geneweb" "-j" jobs ]
]

depends: [
  "benchmark" { with-test }
  "camlp5" { build }
  "cppo" { build }
  "dune" { >= "1.10" }
  "markup"
  "ocaml" { >= "4.05" }
  "ounit" { with-test }
  "stdlib-shims"
  "unidecode" { = "0.2.0" }
]
