opam-version: "2.0"

synopsis: "Genealogy library and software"

maintainer: [ "Julien Sagot <julien.sagot@geneanet.org>" ]

authors: [ "Daniel de Rauglaudre" ]

homepage: "http://geneweb.org"

dev-repo: "git://github.com/geneweb/geneweb"

bug-reports: "https://github.com/geneweb/geneweb/issues"

build: [
  [ "ocaml" "./configure.ml" ]
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "geneweb-lib"
]

conflict-class: [ "geneweb-bin" ]
