opam-version: "2.0"

synopsis: "Genealogy library and software"

maintainer: [ "Julien Sagot <julien.sagot@geneanet.org>" ]

authors: [ "Daniel de Rauglaudre" ]

homepage: "http://geneweb.org"

dev-repo: "git://github.com/geneweb/geneweb"

bug-reports: "https://github.com/geneweb/geneweb/issues"

build: [
  [ "./configure" ]
  [ make "exe" ]
]

install: [
  [ "./configure" ]
  [ make "install" ]
]

remove: [
  [ "./configure" ]
  [ make "uninstall" ]
]

depends: [
  "benchmark" { with-test }
  "camlp5" { build }
  "cppo" { build }
  "dune" { build >= "1.1.1" }
  "markup"
  "ocaml" { >= "4.05" }
  "ounit" { with-test }
  "stdlib-shims"
]

depopts: [
  "num"
  "ocurl"
  "piqi"
  "piqilib"
  "redis"
  "redis-sync"
  "yojson"
  "zarith"
]
