opam-version: "2.0"

synopsis: "Genealogy library and software"

maintainer: [ "Julien Sagot <julien.sagot@geneanet.org>" ]

authors: [ "Daniel de Rauglaudre" ]

homepage: "http://geneweb.org"

dev-repo: "git://github.com/geneweb/geneweb"

bug-reports: "https://github.com/geneweb/geneweb/issues"

build: [
  [ "ocaml" "./configure.ml" ]
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "benchmark"
  "calendars"
  "camlp5" { = "8.00.01" }
  "cppo"
  "dune" { = "2.7.1" }
  "jingoo"
  "markup"
  "num"
  "ocaml"
  "ounit"
  "ocurl"
  "piqi"
  "piqilib"
  "ppx_deriving"
  "redis"
  "redis-sync"
  "stdlib-shims"
  "syslog"
  "unidecode" { = "0.2.0" }
  "uucp"
  "uunf"
  "uutf"
  "yojson"
  "zarith"
]

depexts: [
  ["protobuf-compiler"] {os-family = "debian"}
  ["protobuf"] {os = "macos"}
]
