opam-version: "2.0"

synopsis: "Genealogy library and software"

maintainer: [ "Julien Sagot <julien.sagot@geneanet.org>" ]

authors: [ "Daniel de Rauglaudre" ]

homepage: "http://geneweb.org"

dev-repo: "git://github.com/geneweb/geneweb"

bug-reports: "https://github.com/geneweb/geneweb/issues"

build: [
  [ "ocaml" "./configure.ml" ]
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "benchmark"
  "calendars"
  "camlp5" { = "8.00.01" }
  "cppo"
  "dune" { = "2.9.0" }
  "jingoo"
  "markup"
  "num"
  "ocaml"
  "ounit"
  "ppx_blob"
  "ppx_deriving"
  "ppx_import"
  "stdlib-shims"
  "syslog"
  "unidecode" { = "0.2.0" }
  "uucp"
  "uunf"
  "uutf"
  "zarith"
]
