(rule
 (target version.ml)
 (deps
  (:script ./generate_version.sh)
  (:input ./version.txt))
 (action
  (with-stdout-to
   %{target}
   (bash "bash %{script} %{input}"))))

(library
 (name geneweb)
 (public_name geneweb)
 (synopsis "GeneWeb library")
 (libraries
  unix
  str
  stdlib-shims
  camlp-streams
  geneweb_core
  geneweb_def
  geneweb_db
  geneweb_sosa
  geneweb_util
  geneweb_templ
  geneweb_logs
  yojson
  markup
  re
  uucp
  uri
  wserver
  digestif))
