(ocamllex (modules templ_parser))

(library
 (name geneweb)
 (public_name geneweb)
 (synopsis "GeneWeb library")
 (libraries unix
            str
            stdlib-shims
            camlp-streams
            geneweb_core
            geneweb_def
            geneweb_def_ord
            geneweb_gwdb
            geneweb_util
	    geneweb_system_util
            geneweb_log
            uri
            markup)
 (preprocess (pps ppx_deriving.show))
)
