[project]
name = "geneweb-python"
version = "0.0.1"
description = "A python transcription of GeneWeb"
requires-python = ">=3.8"

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]


[project.scripts] # TODO: add other scripts
# gwu = "gw.gwu:Gwu.main"

[tool.flit.module]
name = "gw"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra"]
testpaths = ["tests"]