(test
 (package geneweb)
 (name test)
 (modules
  test
  sosa_test
  place_test
  calendar_test
  wiki_test
  merge_test
  util_test
  dag2html_test)
 (libraries alcotest geneweb fmt))

(test
 (package geneweb)
 (deps
  (:dict ./dict.txt))
 (name search_test)
 (libraries
  fmt
  qcheck
  qcheck-alcotest
  geneweb_util
  geneweb_compat
  geneweb_search)
 (action
  (run %{test} %{dict})))

(test
 (package geneweb)
 (name heap_test)
 (libraries qcheck qcheck-alcotest geneweb_compat geneweb_search))
