(test
 (package geneweb)
 (name test)
 (modules
  test
  sosa_test
  place_test
  calendar_test
  wiki_test
  merge_test
  util_test
  dag2html_test)
 (libraries alcotest geneweb fmt))

(test
 (package geneweb)
 (deps
  (:dict ./dict.txt))
 (name search_test)
 (libraries fmt qcheck qcheck-alcotest geneweb_util geneweb_search)
 (action
  (run %{test} %{dict})))

(test
 (package geneweb)
 (name heap_test)
 (libraries qcheck qcheck-alcotest geneweb_search))

(test
 (package geneweb)
 (name base64_test)
 (modules base64_test)
 (libraries alcotest qcheck qcheck-alcotest gwd_lib))

(test
 (package geneweb)
 (name url_test)
 (modules url_test)
 (libraries alcotest geneweb_http fmt))
