(library
  (name gwdb_legacy)
  (public_name geneweb-gwdb-legacy)
  (implements geneweb-lib.gwdb_driver.mli)
  (libraries
    geneweb-lib.def
    geneweb-lib.util
  )
  (modules_without_implementation dbdisk)
  (modules
    btree
    database
    dbdisk
    dutil
    gwdb_driver
    gwdb_gc
    outbase
  )
)
