(library
  (name geneweb_gwdb_versioned)
  (public_name geneweb.gwdb-versioned)
  (implements geneweb.gwdb_driver)
  (libraries
	geneweb.gwdb-legacy
	geneweb.def
	geneweb.dsk_format
  )
  (modules
	gwdb_driver
	gwdb_gnwb25
	formats
  	;;dsk_format
	;;format
	;;partition
	;;version
  )
  (private_modules
	formats
	gwdb_gnwb25
  )
)
