(library
 (name gwdb1_internal)
 (public_name geneweb.gwdb1_internal)
 (wrapped false)
 (libraries geneweb.def geneweb.wserver.mli geneweb.util geneweb.io)
 (modules_without_implementation dbdisk)
 (modules
    database
    dbdisk
    dutil
    gwdb1
    gwdb1_internal
    outbase
    type
  )
)

(library
 (name gwdb1)
 (public_name geneweb.gwdb1)
 (libraries gwdb1_internal)
 (implements geneweb.gwdb.mli)
 (modules gwdb)
)
