(library
 (name gwdb1_internal)
 (public_name geneweb-gwdb-legacy.internal)
 (wrapped false)
 (libraries geneweb-lib.def geneweb-lib.wserver.mli geneweb-lib.util geneweb-lib.io)
 (modules_without_implementation dbdisk)
 (modules
    database
    dbdisk
    dutil
    gwdb1
    gwdb1_internal
    outbase
    type
  )
)

(library
 (name gwdb1)
 (public_name geneweb-gwdb-legacy)
 (libraries gwdb1_internal)
 (implements geneweb-lib.gwdb.mli)
 (modules gwdb)
)
