(library
 (public_name geneweb-plugins.fixbase_impl)
 (name fixbase_impl)
 (libraries geneweb.register geneweb.gwd_lib geneweb-plugins.sites)
 (preprocess
  (pps ppx_deriving.show)))

(plugin
 (package geneweb-plugins)
 (name fixbase)
 (libraries geneweb-plugins.fixbase_impl)
 (site
  (geneweb plugins)))

(install
 (package geneweb-plugins)
 (section
  (site
   (geneweb-plugins assets)))
 (files
  (glob_files_rec
   (assets/** with_prefix fixbase))))
