(rule
 (target plugin_forum.ml)
 (deps
  (source_tree assets)
  (:included
   %{project_root}/plugins/forum/forum.ml
   %{project_root}/plugins/forum/forumDisplay.ml)
  (:src plugin_forum.cppo.ml))
 (action
  (run %{bin:cppo} %{src} -o %{target})))

(executable
 (name plugin_forum)
 (libraries geneweb geneweb.gwd_lib geneweb.plugin geneweb_http)
 (modes
  (native plugin))
 (modules plugin_forum))
