(library
 (public_name geneweb-plugins.forum_impl)
 (name forum_impl)
 (libraries geneweb.register geneweb.gwd_lib geneweb-plugins.sites)
 (preprocess
  (pps ppx_deriving.show)))

(plugin
 (package geneweb-plugins)
 (name forum)
 (libraries geneweb-plugins.forum_impl)
 (site
  (geneweb plugins)))

(install
 (package geneweb-plugins)
 (section
  (site
   (geneweb-plugins assets)))
 (files
  (glob_files_rec
   (assets/** with_prefix forum))))
