(alias
   (name plugin)
   (deps (source_tree assets) plugin_v7.cmxs)
)

(library
  (name plugin_v7_lib)
  (libraries geneweb geneweb.gwd_lib)
  (modules
    v7_cousins
    v7_date
    v7_interp
    v7_perso
    v7_place
    v7_some
    v7_sosa
  )
  (wrapped true)
)

(executable
  (name plugin_v7)
  (libraries geneweb.gwd_lib plugin_v7_lib)
  (embed_in_plugin_libraries plugin_v7_lib)
  (flags -linkall)
  (modes (native plugin))
  (modules plugin_v7)
)

(alias (name plugin) (deps plugin_v7.cmxs))
