(alias
   (name plugin)
   (deps (source_tree assets) plugin_v7.cmxs)
)

(library
  (name plugin_v7_lib)
  (libraries geneweb geneweb.gwd_lib geneweb.util)
  (preprocess
    (per_module
      ((action (run camlp5o pr_o.cmo pa_extend.cmo q_MLast.cmo %{input-file}))
       v7_templ)))
  (modules
    v7_cousins
    v7_descend
    v7_date
    v7_interp
    v7_perso
    v7_place
    v7_some
    v7_sosa
    v7_srcfile
    v7_templ
  )
  (wrapped true)
)

(executable
  (name plugin_v7)
  (libraries geneweb.gwd_lib plugin_v7_lib)
  (embed_in_plugin_libraries plugin_v7_lib)
  (flags -linkall)
  (modes (native plugin))
  (modules plugin_v7)
)

(alias (name plugin) (deps plugin_v7.cmxs))
