(library
  (name plugin_v7_im_lib)
  (libraries geneweb geneweb.gwd_lib geneweb.util)
  (modules v7_im_sendImage)
  (wrapped true)
)

(executable
  (name plugin_v7_im)
  (libraries geneweb.gwd_lib plugin_v7_im_lib)
  (embed_in_plugin_libraries plugin_v7_im_lib)
  (modes (native plugin))
  (modules plugin_v7_im)
)

(alias (name plugin) (deps plugin_v7_im.cmxs))
