(cram
 (package geneweb-plugins)
 (applies_to plugins)
 ; Dynamically loading is not supported for
 ; statically linked binaries.
 (enabled_if
  (<> %{env:LINKING_MODE=} "static"))
 (deps
  (package geneweb-plugins)
  %{bin:gwd}
  (glob_files_rec ../../plugins/**)))

(cram
 (package geneweb)
 (applies_to help log ancient)
 (deps %{bin:gwd}))

(cram
 (package geneweb)
 (applies_to ancient)
 (enabled_if
  (and
   (<> %{os_type} Win32)
   (= %{env:GENEWEB_CI=} "on"))))
